<resources>
    <string name="app_name">My recipes</string>
    <string name="home_hello">Здравствуйте, Анастасия</string>
    <string name="home_question">Что будете готовить сегодня?</string>
    <string name="home_search_box_text">Начните поиск</string>
    <string name="home_fresh_heading">Популярные рецепты</string>
    <string name="home_more">Ещё…</string>
    <string name="home_fresh_item_1_title">Французские тосты с клубникой</string>
    <string name="home_recommended_heading">Рекомендуем</string>
    <string name="home_recommended_item_1_title">Черничные маффины</string>
    <string name="home_recommended_item_2_title">Лосось в глазури</string>
    <string name="home_component_search">Поиск</string>
    <string name="home_my_recipes">Мои рецепты</string>
    <string name="home_profile">Профиль</string>
    <string name="recipe_view_ingredients_heading">Ингредиенты</string>
    <string name="recipe_view_algorithm_heading">Пошаговый рецепт</string>
    <string name="recipe_view_directions_1_text">Духовку разогреть до 200°. Палочку ванили разрезать вдоль пополам и ножом соскребсти семена из обеих образованных половинок.</string>
    <string name="recipe_view_directions_2_text">Молоко,ваниль и 40 г сах.пудры довести до кипения,снять с огня,накрыть крышкой и дать настояться 20 мин.</string>
    <string name="recipe_view_directions_3_text">Отдельно взбить яйцо с 10 г сах.пудры. Каждый кусочек обмакать в молоке,затем в яйце. Поставить в духовку на 10 мин,затем перевернуть каждый кусочек и запекать еще 10 мин.</string>
    <string name="recipe_view_directions_4_text">Перед подачей посыпать корицей и сах.пудрой,сверху положить порезанную клубнику.</string>
    <string name="recipe_view_wish">Приятного аппетита</string>
    <string name="recipe_view_button_text">Вернуться</string>
    <string name="welcome_title" translatable="false">Daily Recipe</string>
    <string name="welcome_division" translatable="false">Cooking Done The Easy Way</string>
    <string name="welcome_background">Фоновое изображение</string>
    <string name="Welcome_text_registration">Регистрация</string>
    <string name="welcome_sign_in">Войти</string>
    <string name="registration_name_icon_content_description">Иконка поля ввода имени</string>
    <string name="home_search_icon_content_description">Иконка поля поиска</string>
    <string name="registration_name_label">Имя</string>
    <string name="home_search_label">Начните поиск</string>
    <string name="registration_email_label" translatable="false">Email</string>
    <string name="registration_password_label">Пароль</string>
    <string name="registration_email_icon_content_description">Иконка поля ввода email</string>
    <string name="registration_password_icon_content_description">Иконка поля ввода пароля</string>
    <string name="registration_already_registered" translatable="false">Already registered?</string>
    <string name="registration_sign_in" translatable="false">Sign in.</string>
    <string name="login_forgot_of_password">Забыли пароль?</string>
    <string name="login_don_t_have_an_account" translatable="false">Don\'t have an account?</string>
    <string name="login_register" translatable="false">Register.</string>
    <string name="home_breakfast">Завтрак</string>
    <string name="home_menu_button_icon">Иконка кнопки меню</string>
    <string name="home_picture_of_the_clock">Картинка часов</string>
    <string name="home_picture_of_the_portion">Картинка порции</string>
    <string name="home_reminder_button_icon">Иконка кнопки напоминания</string>
    <string name="home_image_of_french_toast_with_strawberries">Изображение французского тоста с клубникой</string>
    <string name="home_the_number_of_calories_of_french_toast_with_strawberries">120 калорий</string>
    <string name="home_cooking_time_for_french_toast_with_strawberries">10 минут</string>
    <string name="home_number_of_servings_in_french_toast_with_strawberries">1 порция</string>
    <string name="registration_email_error">Email введен некорректно!</string>
    <string name="registration_minimum_number_of_characters">"Введите не менее %1$d символов!"</string>
    <string name="ingredients_sugar">Сахар</string>
    <string name="ingredients_water">Вода</string>
    <string name="ingredients_strawberry">Клубника</string>
    <string name="ingredients_egg">Яицо</string>
    <string name="ingredients_grape">Виноград</string>
    <string name="ingredients_cheese">Сыр</string>
    <string name="Recipe_title_Omelet_classic">Омлет классический</string>
    <string name="Recipe_Omelet_classic_step_1">Яйца выпустить в миску.</string>
    <string name="Recipe_Omelet_classic_step_2">Влить в яйца молоко.</string>
    <string name="Recipe_Omelet_classic_step_3">Добавить муку и соль. По желанию можно добавить щепотку сахара.</string>
    <string name="Recipe_Omelet_classic_step_4">Тщательно взбить смесь венчиком или просто вилкой до однородности.</string>
    <string name="Recipe_Omelet_classic_step_5">Влить яичную смесь на разогретую с растительным маслом сковороду.</string>
    <string name="Recipe_Omelet_classic_step_6">Накрыть сковороду крышкой.</string>
    <string name="Recipe_Omelet_classic_step_7">Выпекать омлет на сковороде минут 10-15 на небольшом огне до готовности.</string>
    <string name="Recipe_Omelet_classic_step_8">Омлет должен подняться и пропечься. По желанию омлет можно перевернуть и обжарить с другой стороны.</string>
    <string name="Categories_meals_second_dish">Второе блюдо</string>
    <string name="Categories_meals_first_dish">Первое блюдо</string>
    <string name="Categories_meals_drink">Напиток</string>
    <string name="Categories_meals_dessert">Десерт</string>
    <string name="Categories_meals_sauce">Соус</string>
</resources>