<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_and_registration_background"
        android:contentDescription="@string/welcome_background"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_title"
            android:textSize="42sp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_division"
            android:textSize="14sp"
            android:textColor="@color/dark_grey"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registration_button"
            android:layout_width="315dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/Welcome_text_registration"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:backgroundTint="@color/orange"
            app:cornerRadius="50dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/welcome_sign_in"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="44dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </LinearLayout>
</FrameLayout>