<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_and_registration_background"
        android:contentDescription="@string/welcome_background"
        android:scaleType="centerCrop"
        android:foreground="@color/dark_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_title"
            android:textSize="42sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_sign_in"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginBottom="70dp"
            android:textStyle="bold"/>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:startIconContentDescription="@string/registration_email_icon_content_description"
            app:startIconDrawable="@drawable/registration_email_icon"
            android:hint="@string/registration_email_label"
            style="@style/Widget.Design.TextInputLayout"
            app:startIconTint="@color/dark_grey"
            android:textColorHint="@color/dark_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_grey"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:startIconContentDescription="@string/registration_password_icon_content_description"
            app:startIconDrawable="@drawable/registration_password_icon"
            android:hint="@string/registration_password_label"
            style="@style/Widget.Design.TextInputLayout"
            app:startIconTint="@color/dark_grey"
            android:textColorHint="@color/dark_grey"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/dark_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_grey"
                android:textColor="@color/white"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:text="@string/sign_in_forgot_of_password"
            android:layout_marginEnd="30dp"
            android:textColor="@color/teal_700"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="315dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/welcome_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:backgroundTint="@color/orange"
            app:cornerRadius="50dp"
            android:layout_marginTop="55dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                android:text="@string/sign_in_don_t_have_an_account"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:text="@string/sign_in_register"
                android:gravity="center"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>